--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,7 @@
     </li>
   </ul>
 
-  <div id="navbarSearch" class="navbar-search w-100 collapse">
+  <div id="navbarSearch" class="navbar-search w-100 collapse" style="display:block; color: black;">
     <input class="form-control w-100 rounded-0 border-0" type="text" placeholder="Search" aria-label="Search">
   </div>
 </header>
