--- a/templates/personal_expenses/index.html
+++ b/templates/personal_expenses/index.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+
+{% block content %}
+
 <h1>Expenses List</h1>
 
 <ul class="list-group">
@@ -13,3 +16,5 @@
 <li class="list-group-item">Bought Beer</li>
 <li class="list-group-item">Bought Beer</li>
 </ul>
+
+{% endblock %}
