--- a/templates/base_auth.html
+++ b/templates/base_auth.html
@@ -17,30 +17,12 @@
   <body>
 
 
-<div class="container-fluid">
-  <div class="row">
-
-    <main rule="main" class="col-md-12">
-
-
-      <div class="col-md-3">
-
-      </div>
-
-      <div class="col-md-6">
+    <main rule="main" >
 
         {% block content %}
 
         {% endblock %} 
-
-      </div>
-
-      <div class="col-md-3">
-
-      </div>
     </main>
-  </div>
-</div>
 
   <script src="{% static 'js/main.js' %}"></script></body>
 </html>
