--- a/templates/base_auth.html
+++ b/templates/base_auth.html
@@ -1,5 +1,5 @@
 {% load static %}
-<html lang="en" data-bs-theme="auto">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,7 +17,7 @@
   <body>
 
 
-    <main rule="main" >
+    <main role="main" >
 
         {% block content %}
 
