--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -9,32 +9,19 @@
         <div class="card mt-5">
             <div class="card-body">
               <div class="card-title py-3">
-                <h4>Register for a free account</h4>
-                <form action="{% url 'register_page' %}" method="post">
+                <h4>Login to your account</h4>
+                <form action="{% url 'login' %}" method="post">
                     {% csrf_token %}
                     {% include 'partials/_messages.html' %}
                     <div class="form-group">
                         <input type="text" name="username" placeholder="Username" id="usernameField" class="form-control form-control-sm" value="{{fieldValues.username}}"/>
                     </div>
 
-                    <div class="invalid_feedback invalid-feedback" style="display:none">
-                    </div>
-
-                    <p class="text-sm text-success usernameSuccessOutput"></p>
-
-                    <div class="form-group">
-                        <input type="email" name="email" placeholder="Email" id="email-field" class="form-control form-control-sm" value="{{fieldValues.email}}"/>
-                    </div>
-
-                    <div class="emailfeedBackArea invalid-feedback" style="display:none">
-
-                    </div>
-
                     <div class="form-group">
                         <input type="password" name="password" placeholder="Password" id="password-field" class="form-control form-control-sm"/>
-                        <small class="float-right py-3 showPasswordToggle">SHOW</small>
+                        <!-- <small class="float-right py-3 showPasswordToggle">SHOW</small> -->
                     </div>
-                    <input type="submit" value="Register" class="btn btn-block btn-primary submit-btn">
+                    <input type="submit" value="Login" class="btn btn-block btn-primary submit-btn">
                 </form>
             </div>
         </div>
