--- a/templates/personal_expenses/index.html
+++ b/templates/personal_expenses/index.html
@@ -2,19 +2,27 @@
 
 {% block content %}
 
-<h1>Expenses List</h1>
+<div class="container">
 
-<ul class="list-group">
-<li class="list-group-item">Bought Beer</li>
-<li class="list-group-item">Bought Beer</li>
-<li class="list-group-item">Bought Beer</li>
-<li class="list-group-item">Bought Beer</li>
-<li class="list-group-item">Bought Beer</li>
-<li class="list-group-item">Bought Beer</li>
-<li class="list-group-item">Bought Beer</li>
-<li class="list-group-item">Bought Beer</li>
-<li class="list-group-item">Bought Beer</li>
-<li class="list-group-item">Bought Beer</li>
-</ul>
+    {% include 'partials/_messages.html' %}
+
+    <h1>Expenses List</h1>
+
+    <ul class="list-group">
+    <li class="list-group-item">Bought Beer</li>
+    <li class="list-group-item">Bought Beer</li>
+    <li class="list-group-item">Bought Beer</li>
+    <li class="list-group-item">Bought Beer</li>
+    <li class="list-group-item">Bought Beer</li>
+    <li class="list-group-item">Bought Beer</li>
+    <li class="list-group-item">Bought Beer</li>
+    <li class="list-group-item">Bought Beer</li>
+    <li class="list-group-item">Bought Beer</li>
+    <li class="list-group-item">Bought Beer</li>
+    </ul>
+    
+</div>
+
+
 
 {% endblock %}
