register page design

--- a/templates/authentication/register_page.html
+++ b/templates/authentication/register_page.html
@@ -3,13 +3,14 @@
 
 {% block content %}
 
-<div class="row">
+<div class="row w-100 h-100">
     <div class="col-md-4"></div>
     <div class="col-md-5">
-        <div class="card mt-5">
-            <div class="card-body">
+        <div class="card mt-5 register-box">
+            <div class="card-body register-box">
               <div class="card-title py-3">
-                <h4>Register for a free account</h4>
+                <h4 class="d-flex justify-content-center">Register for a free account</h4>
+                <br>
                 <form action="{% url 'register_page' %}" method="post">
                     {% csrf_token %}
                     {% include 'partials/_messages.html' %}
