--- a/templates/base_auth.html
+++ b/templates/base_auth.html
@@ -14,7 +14,7 @@
 <link href="{% static 'css/dashboard.css' %}" rel="stylesheet" >
     
   </head>
-  <body>
+  <body style="background-image: url('{% static 'img/income-and-expenses-spot.jpg' %}');">
 
 
     <main role="main" >
