--- a/extracker/static/css/main.css
+++ b/extracker/static/css/main.css
@@ -83,3 +83,9 @@
   .showPasswordToggle:hover{
     font-weight: bold;
   }
+
+.register-box {
+  border-radius: 10px;
+  box-shadow: 10px 10px 10px #000;
+}
+  
