login page design

--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -3,11 +3,11 @@
 
 {% block content %}
 
-<div class="row">
+<div class="row w-100 h-100">
     <div class="col-md-4"></div>
     <div class="col-md-5">
-        <div class="card mt-5">
-            <div class="card-body">
+        <div class="card mt-5 register-box">
+            <div class="card-body register-box">
               <div class="card-title py-3">
                 <h4>Login to your account</h4>
                 <form action="{% url 'login' %}" method="post">
