--- a/templates/partials/_sidebar.html
+++ b/templates/partials/_sidebar.html
@@ -15,7 +15,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link d-flex align-items-center gap-2" href="#">
-              <svg class="bi"><use xlink:href="#file-earmark"/></svg>
+              <svg class="bi"><use xlink:href="{% url 'personal_expenses' %}"/></svg>
               Expenses
             </a>
           </li>
