--- a/templates/personal_expenses/index.html
+++ b/templates/personal_expenses/index.html
@@ -2,26 +2,33 @@
 
 {% block content %}
 
-<div class="container">
-
-    {% include 'partials/_messages.html' %}
-
-    <h1>Expenses List</h1>
-
-    <ul class="list-group">
-    <li class="list-group-item">Bought Beer</li>
-    <li class="list-group-item">Bought Beer</li>
-    <li class="list-group-item">Bought Beer</li>
-    <li class="list-group-item">Bought Beer</li>
-    <li class="list-group-item">Bought Beer</li>
-    <li class="list-group-item">Bought Beer</li>
-    <li class="list-group-item">Bought Beer</li>
-    <li class="list-group-item">Bought Beer</li>
-    <li class="list-group-item">Bought Beer</li>
-    <li class="list-group-item">Bought Beer</li>
-    </ul>
+<div class="container mt-4">
+  
+  
+  <div class="row">
+  
+    <div class="col-md-10">
+      
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="">Expenses</a></li>
+          <li class="breadcrumb-item active" aria-current="page">My Expenses</li>
+        </ol>
+      </nav>
+      
+    </div>
     
+    <div class="col-md-2">
+      
+      <a href="{% url 'add_expenses' %}" class="btn btn-primary">Add Expenses</a>
+      
+    </div>
+  </div>
+  
+
 </div>
+
+{% include 'partials/_messages.html' %}
 
 
 
