--- a/templates/authentication/register_page.html
+++ b/templates/authentication/register_page.html
@@ -40,7 +40,7 @@
                             </div>
                         </div>
                     </div>
-                    <input type="submit" value="Register" class="btn btn-block btn-primary submit-btn">
+                    <div class="d-flex justify-content-center"><input type="submit" value="Register" class="btn btn-block btn-primary submit-btn"></div>
                 </form>
             </div>
         </div>
