--- a/templates/settings/index.html
+++ b/templates/settings/index.html
@@ -21,7 +21,7 @@
             
         </select>
         <div class="input-group-append">
-          <input class="btn btn-outline-secondary" type="submit" value="Save" />
+          <input class="btn btn-primary" type="submit" value="Save" />
         </div>
       </div>
     </form>
