bug fixes add-expensses

--- a/templates/personal_expenses/add_expenses.html
+++ b/templates/personal_expenses/add_expenses.html
@@ -38,7 +38,7 @@
         </div>
         <div class="form-group">
           <label for="">Date Of Expense</label>
-          <input type="date" class="form-control form-control-sm" name="expenseDate">
+          <input type="date" class="form-control form-control-sm" name="expenseDate" value="{{values.date |date:'Y-m-d'}}">
         </div>
 
         <input type="submit" value="Submit" class="btn btn-primary btn-primary-sm">
