--- a/templates/personal_expenses/index.html
+++ b/templates/personal_expenses/index.html
@@ -45,7 +45,7 @@
       <table class="table table-stripped table-hover">
         <thead>
           <tr>
-            <th>Amount (CURRENNCY)</th>
+            <th>Amount ({{currency_type}})</th>
             <th>Category</th>
             <th>Description</th>
             <th>Date</th>
@@ -76,7 +76,7 @@
       <table class="table table-stripped table-hover">
         <thead>
           <tr>
-            <th>Amount (CURRENNCY)</th>
+            <th>Amount ({{currency_type}})</th>
             <th>Category</th>
             <th>Description</th>
             <th>Date</th>
