--- a/templates/base.html
+++ b/templates/base.html
@@ -73,6 +73,13 @@
   <div id="navbarSearch" class="navbar-search w-100 collapse" style="display:block; color: black;">
     <input class="form-control w-100 rounded-0 border-0" type="text" placeholder="Search" aria-label="Search">
   </div>
+  <div class="nav-link me-0 px-3 fs-6 text-white d-flex" href="">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+      <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+      <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+    </svg>
+    <div style="margin-left: 5px;">{{request.user.username}}</div>
+  </div>
 </header>
 
 <div class="container-fluid">
