--- a/templates/personal_expenses/index.html
+++ b/templates/personal_expenses/index.html
@@ -32,7 +32,7 @@
     {% include 'partials/_messages.html' %}
 
     {% if expenses.count %}
-    <div class="row">
+    <div class="row" style="margin-top: 10px;">
       <div class="col-md-8"></div>
       <div class="col-md-4">
         <div class="form-group">
@@ -61,7 +61,7 @@
             <td>{{expense.category}}</td>
             <td>{{expense.description}}</td>
             <td>{{expense.date}}</td>
-            <td><a href="{% url 'edit_expense' expense.id %}" class="btn btn-secondary btn-sm">Edit</a></td>
+            <td><a href="{% url 'edit_expense' expense.id %}" class="btn btn-primary btn-sm">Edit</a></td>
           </tr>
   
           {% endfor %}
