--- a/templates/income/edit_income.html
+++ b/templates/income/edit_income.html
@@ -6,17 +6,25 @@
 
 <div class="container mt-4">
 
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="{% url 'income' %}">Incomes</a></li>
-      <li class="breadcrumb-item active" aria-current="page">Add Incomes</li>
-    </ol>
-  </nav>
-
+  <div class="row">
+    <div class="col-md-10">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="{% url 'income' %}">Income</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Edit Income</li>
+        </ol>
+      </nav>
+    
+    </div>
+    <div class="col-md-2">
+      <a href="{% url 'delete_income' income.id %}" 
+      class="btn btn-danger btn-sm">Delete</a>
+    </div>
+  </div>
   
   <div class="card">
     <div class="card-body">
-        <form action="{% url 'add_income' %}" method="post">
+        <form action="{% url 'edit_income' income.id %}" method="post">
 
           {% include 'partials/_messages.html' %}
           {% csrf_token %}
@@ -29,8 +37,9 @@
           <input type="text" class="form-control form-control-sm" name="description" value="{{values.description}}">
         </div>
         <div class="form-group">
-          <label for="">Sources</label>
+          <label for="">Source</label>
           <select class="form-control" name="source">
+            <option selected name="source" value="{{vakues.source}}">{{values.source}}</option>
             {% for source in sources %}
             <option name="source" value="{{source.name}}">{{source.name}}</option>
             {%endfor %}
@@ -41,7 +50,7 @@
           <input type="date" class="form-control form-control-sm" name="incomeDate">
         </div>
 
-        <input type="submit" value="Submit" class="btn btn-primary btn-primary-sm">
+        <input type="submit" value="Save" class="btn btn-primary btn-primary-sm">
       </form>
     </div>
   </div>
