--- a/templates/authentication/register_page.html
+++ b/templates/authentication/register_page.html
@@ -43,6 +43,10 @@
                     <div class="d-flex justify-content-center"><input type="submit" value="Register" class="btn btn-block btn-primary submit-btn"></div>
                 </form>
             </div>
+            <div>
+                Already have an account? 
+                <a href="{% url 'login' %}">Login</a>
+            </div>
         </div>
 
 
