--- a/templates/authentication/reset_password.html
+++ b/templates/authentication/reset_password.html
@@ -1,11 +1,47 @@
 {% extends 'base_auth.html' %}
+{% load static %}
 
 {% block content %}
 
-<div class="card">
-    <div class="card-body">
-        <h1>Login</h1>
-    </div>    
+<div class="row w-100 h-100">
+    <div class="col-md-4"></div>
+    <div class="col-md-5">
+        <div class="card mt-5 register-box">
+            <div class="card-body register-box">
+              <div class="card-title py-3">
+                <h4 class="d-flex justify-content-center">Please enter your email to get reset link</h4>
+                <br>
+                <form action="{% url 'request-reset-password' %}" method="post">
+                    <div class="form-group">
+                        <input type="email" name="email" placeholder="Email" id="email-field" class="form-control form-control-sm" value="{{values.email}}"/>
+                    </div>
+                    <p class="text-sm text-success usernameSuccessOutput"></p>
+
+                    <div class="emailfeedBackArea invalid-feedback" style="display:none">
+
+                    </div>
+                    <div class="d-flex justify-content-center"><input type="submit" value="Submit" class="btn btn-block btn-primary submit-btn"></div>
+                </form>
+            </div>
+            <div class="container d-flex justify-content-between">
+                <div class="text-lead lead">
+                    Have an acount?
+                    <a href="{% url 'login' %}">Login</a>
+                </div>
+                <div class="text-lead lead">
+                    Don't have an account? 
+                    <a href="{% url 'register_page' %}">Register</a>
+                </div>
+            </div>
+        </div>
+
+
+
+    </div>
+    <div class="col-md-3"></div>
 </div>
+
+
+<script src="{% static 'js/register.js' %}"></script>
 
 {% endblock %}
