--- a/templates/authentication/set_new_password.html
+++ b/templates/authentication/set_new_password.html
@@ -1,11 +1,61 @@
 {% extends 'base_auth.html' %}
+{% load static %}
 
 {% block content %}
 
-<div class="card">
-    <div class="card-body">
-        <h1>Login</h1>
-    </div>    
+<div class="row w-100 h-100">
+    <div class="col-md-4"></div>
+    <div class="col-md-5">
+        <div class="card mt-5 register-box">
+            <div class="card-body register-box">
+              <div class="card-title py-3">
+                <h4 class="d-flex justify-content-center">Set your new password</h4>
+                <br>
+                <form action="{% url 'register_page' %}" method="post">
+                    {% csrf_token %}
+                    {% include 'partials/_messages.html' %}
+                    <div class="form-group">
+                        <input type="text" name="username" placeholder="Username" id="usernameField" class="form-control form-control-sm" value="{{fieldValues.username}}"/>
+                    </div>
+
+                    <div class="invalid_feedback invalid-feedback" style="display:none">
+                    </div>
+
+                    <p class="text-sm text-success usernameSuccessOutput"></p>
+
+                    <div class="form-group">
+                        <input type="email" name="email" placeholder="Email" id="email-field" class="form-control form-control-sm" value="{{fieldValues.email}}"/>
+                    </div>
+                    <p class="text-sm text-success usernameSuccessOutput"></p>
+
+                    <div class="emailfeedBackArea invalid-feedback" style="display:none">
+
+                    </div>
+
+                    <div class="form-group">
+                        <input type="password" name="password" placeholder="Password" id="password-field" class="form-control form-control-sm"/>
+                        <div class="container">
+                            <div class="row">
+                                <div class="text-end"><small class="float-right py-3 showPasswordToggle">HIDE</small></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-center"><input type="submit" value="Register" class="btn btn-block btn-primary submit-btn"></div>
+                </form>
+            </div>
+            <div>
+                Already have an account? 
+                <a href="{% url 'login' %}">Login</a>
+            </div>
+        </div>
+
+
+
+    </div>
+    <div class="col-md-3"></div>
 </div>
+
+
+<script src="{% static 'js/register.js' %}"></script>
 
 {% endblock %}
