--- a/templates/authentication/reset_password.html
+++ b/templates/authentication/reset_password.html
@@ -11,7 +11,10 @@
               <div class="card-title py-3">
                 <h4 class="d-flex justify-content-center">Please enter your email to get reset link</h4>
                 <br>
+
+                <!-- Reset Password Form -->
                 <form action="{% url 'request-reset-password' %}" method="post">
+                    {% csrf_token %}
                     <div class="form-group">
                         <input type="email" name="email" placeholder="Email" id="email-field" class="form-control form-control-sm" value="{{values.email}}"/>
                     </div>
@@ -23,6 +26,8 @@
                     <div class="d-flex justify-content-center"><input type="submit" value="Submit" class="btn btn-block btn-primary submit-btn"></div>
                 </form>
             </div>
+
+            <!-- Links for Login and Registration -->
             <div class="container d-flex justify-content-between">
                 <div class="text-lead lead">
                     Have an acount?
