--- a/templates/authentication/set_new_password.html
+++ b/templates/authentication/set_new_password.html
@@ -6,11 +6,15 @@
 <div class="row w-100 h-100">
     <div class="col-md-4"></div>
     <div class="col-md-5">
+
+        <!-- Set Password Card -->
         <div class="card mt-5 register-box">
             <div class="card-body register-box">
               <div class="card-title py-3">
                 <h4 class="d-flex justify-content-center">Set your new password</h4>
                 <br>
+
+                <!-- Set Password Form -->
                 <form action="{% url 'register_page' %}" method="post">
                     {% csrf_token %}
                     {% include 'partials/_messages.html' %}
@@ -43,6 +47,8 @@
                     <div class="d-flex justify-content-center"><input type="submit" value="Register" class="btn btn-block btn-primary submit-btn"></div>
                 </form>
             </div>
+
+            <!-- Already have an account? Login Link -->
             <div>
                 Already have an account? 
                 <a href="{% url 'login' %}">Login</a>
