--- a/templates/income/add_income.html
+++ b/templates/income/add_income.html
@@ -13,21 +13,27 @@
     </ol>
   </nav>
 
-  
+  <!-- Income Form -->
   <div class="card">
     <div class="card-body">
         <form action="{% url 'add_income' %}" method="post">
 
           {% include 'partials/_messages.html' %}
           {% csrf_token %}
+
+          <!-- Income Form -->
         <div class="form-group">
           <label for="">Amount</label>
           <input type="number" class="form-control form-control-sm" name="amount" value="{{values.amount}}">
         </div>
+
+        <!-- Description Input -->
         <div class="form-group">
           <label for="">Description</label>
           <input type="text" class="form-control form-control-sm" name="description" value="{{values.description}}">
         </div>
+
+        <!-- Sources Dropdown -->
         <div class="form-group">
           <label for="">Sources</label>
           <select class="form-control" name="source">
@@ -36,11 +42,14 @@
             {%endfor %}
           </select>
         </div>
+
+        <!-- Date of Income Input -->
         <div class="form-group">
           <label for="">Date Of Income</label>
           <input type="date" class="form-control form-control-sm" name="incomeDate">
         </div>
 
+        <!-- Submit Button -->
         <input type="submit" value="Submit" class="btn btn-primary btn-primary-sm">
       </form>
     </div>
