--- a/templates/income/edit_income.html
+++ b/templates/income/edit_income.html
@@ -8,6 +8,8 @@
 
   <div class="row">
     <div class="col-md-10">
+      
+      <!-- Breadcrumb Navigation -->
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="{% url 'income' %}">Income</a></li>
@@ -17,6 +19,9 @@
     
     </div>
     <div class="col-md-2">
+
+      <!-- Delete Button -->
+      
       <a href="{% url 'delete_income' income.id %}" 
       class="btn btn-danger btn-sm">Delete</a>
     </div>
